tests/negative/test_message_loc_only_oper.orb
fnc main () () {
    message 1::loc;
};